--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -19,6 +19,7 @@
   <footer class="footer mt-auto py-3">
     <%- include('../partials/footer.ejs'); %>
   </footer>
+  <%- include('../helpers/formScript.ejs'); %>
 </body>
 
 </html>
