--- a/public/partials/step2.ejs
+++ b/public/partials/step2.ejs
@@ -35,11 +35,13 @@
   <label for="cell" class="form-label">Cell</label>
   <input type="text" id="cell" name="cell" class="form-control" placeholder="Enter cell #" required />
 </div>
-<div class="col-md-4">
-  <label for="quantity" class="form-label">Carriage Quantity</label>
-  <input type="text" id="quantity" name="quantity" class="form-control" placeholder="# of carriages" required />
-</div>
-<div class="col-md-6">
-  <label for="carriage" class="form-label">Service Cost</label>
-  <input type="text" id="carriage" name="carriage" class="form-control" placeholder="Cost per carriage" required />
+<div id="service-section">
+  <div class="col-md-4">
+    <label for="quantity" class="form-label">Carriage Quantity</label>
+    <input type="text" id="quantity" name="quantity" class="form-control" placeholder="# of carriages" required />
+  </div>
+  <div class="col-md-6">
+    <label for="carriage" class="form-label">Service Cost</label>
+    <input type="text" id="carriage" name="carriage" class="form-control" placeholder="Cost per carriage" required />
+  </div>
 </div>
