--- a/public/partials/step1.ejs
+++ b/public/partials/step1.ejs
@@ -35,6 +35,10 @@
           <input type="checkbox" class="form-check-input" id="equipBool" name="equipBool" checked />
           <label for="equipBool" class="form-check-label">Include Equipment Section</label>
         </div>
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="serviceBool" name="serviceBool" checked />
+          <label for="serviceBool" class="form-check-label">Include Service Section</label>
+        </div>
       </div>
       <div class="col-md-6">
         <label for="checkbox" class="form-label">Select Contracts</label>
